[tool.poetry]
name = "twalk"
version = "1.0.1"
description = "Condense a directory tree into a single txt file or extract it from one"
authors = ["Ovsyanka <szmiev2000@gmail.com>"]
license = "MIT"
homepage = "https://github.com/Ovsyanka83/twalk"
repository = "https://github.com/Ovsyanka83/twalk"
include = [
    "LICENSE",
    "README.md"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cli_command_name = 'twalk:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
